--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,10 +1,10 @@
 :root {
-  --primary: #497573;
-  --secondary: #99f7f2;
+  --primary: #99c259;
+  --secondary: #68c0bc;
   --tertiary: #b2c2c1;
-  --quatrinary: #cadbda;
-  --light: #e1f5f4;
-  --dark: #6c7575;
+  --quatrinary: #10e7d9;
+  --light: #e9e9e9;
+  --dark: #383a39;
   --error: rgb(228, 46, 1);
   --border-radius: 0.3rem;
   --spacing-one: calc(1rem * 0.25);
